--- a/views/galeria.jade
+++ b/views/galeria.jade
@@ -8,7 +8,7 @@ block contenido
                         img(src="images/banner_galeria.jpg" alt="" class="img-responsive")
                         div(class="carousel-caption kb_caption kb_caption_center")
                             h3(data-animation="animated flipInX")|Galería
-    #gallery.gallery
+    #gallery.gallery(style="margin-top:-5% !important")
       .w3_tittle.second.two
         br
         br
@@ -22,88 +22,70 @@ block contenido
               a.example-image-link(href='images/galeria_wayra1.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra1.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 1
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra2.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra2.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 2
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra3.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra3.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 3
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra4.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra4.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 4
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra5.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra5.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 5
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra6.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra6.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 6
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra7.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra7.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 7
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra8.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra8.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 8
-                  p Descripión
         .col-md-4.gallery-grid
           .grid
             figure.effect-roxy.galeria_wayra
               a.example-image-link(href='images/galeria_wayra9.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
                 img(src='images/galeria_wayra9.jpg', alt='')
                 figcaption
-                  h3
-                    | Fotograía 
-                    span 9
-                  p Descripión
+        .col-md-4.gallery-grid
+          .grid
+            figure.effect-roxy.galeria_wayra
+              a.example-image-link(href='images/galeria_wayra10.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
+                img(src='images/galeria_wayra10.jpg', alt='')
+                figcaption
+        .col-md-4.gallery-grid
+          .grid
+            figure.effect-roxy.galeria_wayra
+              a.example-image-link(href='images/galeria_wayra11.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
+                img(src='images/galeria_wayra11.jpg', alt='')
+                figcaption
+        .col-md-4.gallery-grid
+          .grid
+            figure.effect-roxy.galeria_wayra
+              a.example-image-link(href='images/galeria_wayra12.jpg', data-lightbox='example-set', data-title='Descrpción para la fotograía.')
+                img(src='images/galeria_wayra12.jpg', alt='')
+                figcaption
         .clearfix  
