--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block contenido
                 div(class="carousel-inner" role="listbox")
                     div(class="item active")
                         img(src="images/banner.jpg" alt="" class="img-responsive")
-                        div(class="carousel-caption kb_caption kb_caption_right")
+                        div(class="carousel-caption kb_caption kb_caption_center")
                             h3(data-animation="animated flipInX")|Especialistas en Control Aviar
                             h4(data-animation="animated flipInX")|Control de aves del sector agrícola
                     div(class="item")
@@ -16,7 +16,7 @@ block contenido
                             h4(data-animation="animated flipInX")|Nuestras mejores aves para ser apreciadas
                     div(class="item")
                         img(src="images/banner2.jpg" alt="" class="img-responsive")
-                        div(class="carousel-caption kb_caption  kb_caption_right")
+                        div(class="carousel-caption kb_caption  kb_caption_center")
                             h3(data-animation="animated flipInX")|Espectaculos en Eventos
                             h4(data-animation="animated flipInX")|Entretenimiento y diversión garantizada
                 a(class="left carousel-control kb_control_left" href="#kb" role="button" data-slide="prev")
@@ -35,9 +35,8 @@ block contenido
                     span.second
             .w3-agile-top-info
                 .col-md-7.w3_about_grid_left
-                    h6 Titulo Presentación Servicios 
-                    p
-                        | Presentación servicios
+                    h6 Especialistas en nuestro trabajo
+                    br
                     #accordion.panel-group.about_panel(role='tablist', aria-multiselectable='true')
                         .panel.panel-default
                             #headingOne.panel-heading(role='tab')
@@ -45,37 +44,42 @@ block contenido
                                     a.pa_italic(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseOne', aria-expanded='true', aria-controls='collapseOne')
                                         span.glyphicon.glyphicon-plus(aria-hidden='true')
                                         i.glyphicon.glyphicon-minus(aria-hidden='true')
-                                        | Especialistas en Control Aviar
+                                        | Control Aviar
                             #collapseOne.panel-collapse.collapse.in(role='tabpanel', aria-labelledby='headingOne')
                                 .panel-body.panel_text
-                                    | Resumen corto servicio.
+                                    | Desde el principio de los tiempos, el ecosistema ha sido autónomo en esta labor: las aves de presa, en toda su variedad de especies, han mantenido el control sobre las demás aves y mamíferos. 
                                     br
-                                    a(href="#")|Ver más.
+                                    |Lamentablemente, el uso irresponsable de pesticidas, el tráfico ilegal y la reducción de sus hábitats han conseguido mermar gravemente sus poblaciones a nivel mundial.
+                                    br
+                                    a(href="/control-aviar")|Ver más.
                         .panel.panel-default
                             #headingTwo.panel-heading(role='tab')
                                 h4.panel-title.asd
                                     a.pa_italic.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseTwo', aria-expanded='false', aria-controls='collapseTwo')
                                         span.glyphicon.glyphicon-plus(aria-hidden='true')
                                         i.glyphicon.glyphicon-minus(aria-hidden='true')
-                                        | Exhibiciónes Aviares
+                                        | Exhibiciones de cetrería y aves de presa
                             #collapseTwo.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingTwo')
                                 .panel-body.panel_text
-                                    | Resumen corto servicio.
+                                    | Hemos desarrollado un formato de exhibición de aves de presa, reptiles y mamíferos pequeños altamente educativo e interactivo, el cual se puede disfrutar de lunes a domingo en “El Castillo de Chancay”.
                                     br
-                                    a(href="#")|Ver más.
+                                    a(href="exhibiciones")|Ver más.
                         .panel.panel-default
                             #headingThree.panel-heading(role='tab')
                                 h4.panel-title.asd
                                     a.pa_italic.collapsed(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseThree', aria-expanded='false', aria-controls='collapseThree')
                                         span.glyphicon.glyphicon-plus(aria-hidden='true')
                                         i.glyphicon.glyphicon-minus(aria-hidden='true')
-                                        | Espectaculos en Eventos
+                                        | Publicidad
                             #collapseThree.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingThree')
                                 .panel-body.panel_text
-                                    | Resumen corto servicio. 
+                                    | También participamos de varias campañas publicitarias (fotografía), magazines semanales y programas de televisión a nivel nacional.
                                     br
-                                    a(href="#")|Ver más.
+                                    a(href="publicidad")|Ver más.
                 .col-md-5.w3ls-welcome-img1.w3ls-welcome-img2
+                    br
+                    br
+                    br
                     iframe(src='https://www.youtube.com/embed/Jzakfq2L1Fw', frameborder='1')
 
     #about.work
@@ -89,19 +93,22 @@ block contenido
                         .line-style
                             span
                     p
-                        | Wayra control EIRL es una empresa innovadora en el rubro del control de plagas, pues basados en técnicas de trampeo antiguas, agudos conocimientos en comportamiento animal y elementos de captura de vanguardia, hemos desarrollado técnicas específicas para la reducción progresiva y sistemática de grandes poblaciones de aves plaga; En función de cada situación en particular nuestros técnicos especializados en dichos sistemas desarrollan estructuras y elementos de trampeo a medida, a fin de sobrepasar largamente las expectativas de nuestros clientes.
+                        | Wayra Control EIRL es una empresa inscrita en el RNP (Registro Nacional de Proveedores), homologada y certificada, conformada por profesionales reconocidos en el campo de la ornitología y biología, y maestros de la cetrería con una amplia trayectoria en el rubro del control de plagas aviares.
                         br
-                        |Estamos convencidos además, que solo a través del manejo integrado de diversos métodos, se obtienen resultados tangibles y permanentes a corto y mediano plazo.
+                        br
+                        |La razón de nuestro éxito en cada proyecto emprendido, es el agudo conocimiento de los comportamientos y la psicología animal. A ello se suma el uso exclusivo de aves de presa nacidas en cautiverio en el Zoo criadero “El Huayco”, las mismas que han sido minuciosamente entrenadas para ejercer de manera sostenida su función predatoria. Adicionalmente a esto nuestra visión vanguardista nos ha llevado a hacer uso de nuevas tecnologías y artículos nunca antes empleados en el control aviar. (GPS para halcones, aeromodelismo, drones, etc).
             .clearfix
             .col-md-6.gallery-grid
                 .grid
                     figure.effect-roxy
                         a.example-image-link
-                            img(src='images/landing_mision.jpg', alt='')
+                            img(src='images/landing_mision.jpg', class="img-responsive", alt='')
                             figcaption
                                 h3
                                     span Misión
-                                h3|Contribuir con nuestro enfoque particular, de captura, caza sanitaria y reubicación progresiva, a la despoblación continua de aves nocivas, en áreas y zonas aledañas que afecten a poblaciones humanas vulnerables y de escasos recursos, donde generalmente los principales perjudicados suelen ser niños y ancianos, por la exposición continua y la falta de medidas sanitarias.
+                                h3|Wayra Control EIRL contribuye socialmente, con su enfoque particular de caza, captura y/o eliminación, a la reubicación sanitaria de grandes poblaciones aviares.
+                                br
+                                h3|La despoblación de palomas castilla o “columba livia” en zonas urbanas, o donde se requiera, no es una opción. Por el contrario, se trata de una necesidad urgente en vista de la zoonosis y la transmisión de múltiples enfermedades que afectan a la salud humana.
             .col-md-6.gallery-grid
                 .grid
                     figure.effect-roxy
@@ -110,27 +117,57 @@ block contenido
                             figcaption
                                 h3
                                     span Visión
-                                h3|Cambiar sistemáticamente el método trasnochado y nada efectivo que se emplea actualmente en el mercado. Visión que plantea la disuasión y espanta de aves, como la única alternativa en el manejo del control de las plagas aviares. Cuando lo ideal es atacar frontalmente el problema, capturando, reduciendo y reubicando a los individuos en cuestión, pues solo así se estarán logrando resultados, que en el paso del tiempo puedan ser realmente efectivos, sostenibles y altamente benéficos para todos.
+                                h3|Wayra Control EIRL, además de generar estrategias y planes de manejo ampliamente exitosos en el rubro del control aviar, difunde y enseña el arte ancestral de la cetrería, brindando talleres y charlas de educación medioambiental en colegios, institutos y universidades. Por otra parte, contribuye a que las nuevas generaciones de niños y jóvenes hagan un uso responsable de los recursos naturales, respetando la fauna silvestre y protegiéndola.
+            .clearfix
         .agileits_work_grids
-            ul#flexiselDemo1
-                li
-                    .agileits_work_grid.view.view-sixth
-                        img.img-responsive(src='images/g1.jpg', alt=' ')
-                        .mask
-                            a.info(href='#') Dazzling Birds
-                li
-                    .agileits_work_grid.view.view-sixth
-                        img.img-responsive(src='images/g3.jpg', alt=' ')
-                        .mask
-                            a.info(href='#') Dazzling Birds
-                li
-                    .agileits_work_grid.view.view-sixth
-                        img.img-responsive(src='images/g4.jpg', alt=' ')
-                        .mask
-                            a.info(href='#') Dazzling Birds
-                li
-                    .agileits_work_grid.view.view-sixth
-                        img.img-responsive(src='images/g2.jpg', alt=' ')
-                        .mask
-                            a.info(href='#') Dazzling Birds
-        .clearfix
+          br
+          h3.agile-tittle.two.gal Nuestros principales clientes 
+          br
+          br
+          br
+          ul#flexiselDemo1
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_1.jpg', alt=' ')
+                .mask
+                  a.info Pesquera Austral
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_2.png', alt=' ')
+                .mask
+                  a.info Castillo de Chancay
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_3.jpg', alt=' ')
+                .mask
+                  a.info Colchones El Cisne
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_4.jpg', alt=' ')
+                .mask
+                  a.info Municipalidad de Chancay
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_5.jpg', alt=' ')
+                .mask
+                  a.info UGEL N°03
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_6.png', alt=' ')
+                .mask
+                  a.info Agroindustrias AIB
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_7.png', alt=' ')
+                .mask
+                  a.info Beggie
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_8.jpg', alt=' ')
+                .mask
+                  a.info Talsa
+            li
+              .agileits_work_grid.view.view-sixth
+                img.img-responsive(src='images/cliente_9.png', alt=' ')
+                .mask
+                  a.info Hortifrut
