Actualizacion style.css

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -16,10 +16,12 @@ block contenido
                     span(class="second")
             div(class="contact-left")
                 h4|Ubícanos
-                p|Dirección
-                p|Distrito, Departameno - Perú
+                p|Calle los nogales 353
+                p|Santa Anita - Lima
                 h4|Llámanos
-                p|+(051) 912 123 456
+                p|+(051) 943 547 748
+                p|+(01) 4179068
+                p|+(051) 939 086 646
             div(class="contact-middle")
                 h4|Escríbenos
                 form(action="#" method="post")
