--- a/views/layout.jade
+++ b/views/layout.jade
@@ -103,27 +103,25 @@ html(lang="en")
                         h4
                             i.fa.fa-phone-square(aria-hidden='true')
                             |  
-                            a  932 995 997
+                            a  943 547 748
                     li
                         h4
                             i.fa.fa-phone-square(aria-hidden='true')
                             |  
-                            a  932 995 997
+                            a  939 086 646
                     li
                         h4
-                            i.fa.fa-envelope(aria-hidden='true')
+                            i.fa.fa-phone-square(aria-hidden='true')
                             |  
-                            a(href="mailto:jposadas@wayracontrol.com?Subject=Información")| jposadas@wayracontrol.com
+                            a  01-4179068
                     li
                         h4
-                            i.fa.fa-envelope(aria-hidden='true')
-                            |  
-                            a(href="mailto:jposadas@wayracontrol.com?Subject=Información")| jposadas@wayracontrol.com
+                            a(href="mailto:cotizaciones@wayracontrol.com?Subject=Información")| cotizaciones@wayracontrol.com
                     li
                         h4
-                            i.fa.fa-envelope(aria-hidden='true')
+                            i.fa.fa-home(aria-hidden='true')
                             |  
-                            a(href="mailto:jposadas@wayracontrol.com?Subject=Información")| jposadas@wayracontrol.com
+                            a  Calle los nogales 353 - Santa Anita - Lima
                     li
                         h4
                             i.fa.fa-arrow-circle-right(aria-hidden='true')
