--- a/views/contact.jade
+++ b/views/contact.jade
@@ -19,11 +19,13 @@ block contenido
                 p|Calle los nogales 353
                 p|Santa Anita - Lima
                 h4|Llámanos
-                p|+(051) 943 547 748
                 p|+(01) 4179068
+                p|+(051) 943 547 748
                 p|+(051) 939 086 646
             div(class="contact-middle")
                 h4|Escríbenos
+                    div(id="falta_info" style="display:none;")
+                        b(style="color:red") | Completa la información solicitada.
                     div(class="form-agileinfo")
                         p|Nombres
                         input(type="text" id="name" name="your name" placeholder="Tú nombre" required="")
