--- a/views/galeria.jade
+++ b/views/galeria.jade
@@ -12,7 +12,7 @@ block contenido
       .w3_tittle.second.two
         br
         br
-        h3.agile-tittle.two.gal Nuestros mejores ejemplares
+        h3.agile-tittle.two.gal Algunos de nuestros aliados
         .line-style.second
           span.second
       .w3-agile-top-info
@@ -89,3 +89,24 @@ block contenido
                 img(src='images/galeria_wayra12.jpg', alt='')
                 figcaption
         .clearfix  
+        #gallery.gallery(style="margin-top:-5% !important")
+          .w3_tittle.second.two
+            br
+            br
+            h3.agile-tittle.two.gal Videos de presentaciones
+            .line-style.second
+              span.second
+          .w3-agile-top-info
+            .col-md-4.w3ls-welcome-img1.w3ls-welcome-img2
+                iframe(src='https://www.youtube.com/embed/KvOK4FNhNUY', frameborder='1')
+            .col-md-4.w3ls-welcome-img1.w3ls-welcome-img2
+                iframe(src='https://www.youtube.com/embed/xbjY-4LmPcA', frameborder='1')
+            .col-md-4.w3ls-welcome-img1.w3ls-welcome-img2
+                iframe(src='https://www.youtube.com/embed/3zEvWn63hjE', frameborder='1')
+            .col-md-4.w3ls-welcome-img1.w3ls-welcome-img2
+                iframe(src='https://www.youtube.com/embed/BmXTCw53Uxs', frameborder='1')
+            .col-md-4.w3ls-welcome-img1.w3ls-welcome-img2
+                iframe(src='https://www.youtube.com/embed/1vRexvFDmVY', frameborder='1')
+            .col-md-4.w3ls-welcome-img1.w3ls-welcome-img2
+                iframe(src='https://www.youtube.com/embed/3zEvWn63hjE', frameborder='1')
+            .clearfix  
