--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,14 +131,14 @@ input[type="submit"],.w3l_header_left ul li a,.related-post-right h4 a,.comments
     vertical-align: top;
 }
 .w3l_header_right ul li:hover i{
-	
+
 	 transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -o-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -ms-transition: 0.5s all;
 }
-.w3l_header_right ul li:hover { 
+.w3l_header_right ul li:hover {
     border: 2px solid #0066b2;
 	 background: #0066b2;
 	 transition: 0.5s all;
@@ -216,7 +216,7 @@ input[type="submit"],.w3l_header_left ul li a,.related-post-right h4 a,.comments
   position: fixed;
   z-index: 1000;
   width: 100%;
-  height: 15%; 
+  height: 15%;
   left: 0;
   top: 0;
   display: none;
@@ -677,9 +677,9 @@ ul.about-agile li i {
     background: #000;
     padding: 0.5em 1em;
 	line-height:2.5em;
-   }	
+   }
 /*--flexisel--*/
-.flex-slider{	
+.flex-slider{
 	background:#222227;
 	padding: 70px 0 165px 0;
 }
@@ -747,7 +747,7 @@ ul.about-agile li i {
 
 .wthree-text {
        padding:6.5em 6em;
-	   
+
 }
 .wthree-text h4{
     font-size: 2em;
@@ -1199,7 +1199,7 @@ h3.tittle3 {
 
 /* Common style */
 .grid figure {
-	position: relative;	
+	position: relative;
 	overflow: hidden;
 	height: auto;
 	text-align: center;
@@ -1363,7 +1363,7 @@ figure.effect-roxy:hover p {
 }
 
 .w3_about_grid_left h6 {
-  color: #168eea;
+    color: #003c5d;
     font-size: 1.7em;
     text-transform: uppercase;
     font-weight: 600;
@@ -1636,7 +1636,7 @@ div#contact h3 {
 	-webkit-transition:all 0.5s ease-in-out;
 	-moz-transition:all 0.5s ease-in-out;
 	-o-transition:all 0.5s ease-in-out;
-	-ms-transition:all 0.5s ease-in-out;	
+	-ms-transition:all 0.5s ease-in-out;
 }
 .contact-middle p {
     color: #0000;
@@ -1699,7 +1699,7 @@ textarea:focus{
 	bottom: 20px;
 	right: 2%;
 	overflow: hidden;
-	z-index: 999; 
+	z-index: 999;
 	width: 32px;
 	height: 32px;
 	border: none;
@@ -1826,7 +1826,7 @@ textarea:focus{
 		left: 13px;
 		top: 15px;
 		width: 90%;
-		height: 85%;	
+		height: 85%;
 	}
 	.team-grid-text-agile {
 		padding: 3em 1em 3em 2em;
@@ -1861,7 +1861,7 @@ textarea:focus{
 		letter-spacing: 1px;
 		font-size: 1em;
 		line-height:2.3em;
-   }	
+   }
 
 }
 @media (max-width:1024px){
@@ -1896,7 +1896,7 @@ textarea:focus{
 	}
 }
 @media (max-width: 991px){
-    
+
 
 	.w3l_header_left ul li {
 		font-size: 13px;
@@ -2073,7 +2073,7 @@ textarea:focus{
 @media (max-width: 767px){
     .logo_wayra
     {
-        max-width: 60%;  
+        max-width: 60%;
     }
 	.navbar-toggle {
         position: relative !important;
@@ -2085,11 +2085,11 @@ textarea:focus{
 	.navbar-default .navbar-toggle .icon-bar {
 		background-color: #212121;
 	}
-    
+
     .navbar-default .navbar-toggle:hover .icon-bar {
 		background-color: #212121;
 	}
-    
+
 	.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
 		background-color: transparent;
         border-color: darkgreen;
@@ -2150,9 +2150,9 @@ textarea:focus{
 @media (max-width: 640px){
     .logo_wayra
     {
-        max-width: 50%;  
+        max-width: 50%;
     }
-    
+
 	.w3l_header_right {
 		float: none;
 		text-align: center;
@@ -2447,7 +2447,7 @@ textarea:focus{
 	}
 }
 @media (max-width:320px){
-	
+
 	.w3l_header_right {
 		float: none;
 		text-align: center;
