--- a/views/index.jade
+++ b/views/index.jade
@@ -12,13 +12,13 @@ block contenido
                     div(class="item")
                         img(src="images/banner1.jpg" alt="" class="img-responsive")
                         div(class="carousel-caption kb_caption kb_caption_center")
-                            h3(data-animation="animated flipInX")|Exhibiciónes Aviares
+                            h3(data-animation="animated flipInX")|Exhibiciones de cetrería 100% interactivas
                             h4(data-animation="animated flipInX")|Nuestras mejores aves para ser apreciadas
                     div(class="item")
                         img(src="images/banner2.jpg" alt="" class="img-responsive")
                         div(class="carousel-caption kb_caption  kb_caption_center")
-                            h3(data-animation="animated flipInX")|Espectaculos en Eventos
-                            h4(data-animation="animated flipInX")|Entretenimiento y diversión garantizada
+                            h3(data-animation="animated flipInX")|Espectaculos y eventos
+                            h4(data-animation="animated flipInX")|Educación ambiental y diversión asegurada
                 a(class="left carousel-control kb_control_left" href="#kb" role="button" data-slide="prev")
                     span(class="glyphicon glyphicon-menu-left" aria-hidden="true")
                     span(class="sr-only")|Previous
@@ -47,7 +47,7 @@ block contenido
                                         | Control Aviar
                             #collapseOne.panel-collapse.collapse.in(role='tabpanel', aria-labelledby='headingOne')
                                 .panel-body.panel_text
-                                    | Desde el principio de los tiempos, el ecosistema ha sido autónomo en esta labor: las aves de presa, en toda su variedad de especies, han mantenido el control sobre las demás aves y mamíferos. 
+                                    | Desde el principio de los tiempos, el ecosistema ha sido autónomo en esta labor. Las aves de presa, en toda su variedad de especies, han mantenido el control sobre las demás aves y mamíferos. 
                                     br
                                     |Lamentablemente, el uso irresponsable de pesticidas, el tráfico ilegal y la reducción de sus hábitats han conseguido mermar gravemente sus poblaciones a nivel mundial.
                                     br
@@ -80,7 +80,7 @@ block contenido
                     br
                     br
                     br
-                    iframe(src='https://www.youtube.com/embed/Jzakfq2L1Fw', frameborder='1')
+                    iframe(src='https://www.youtube.com/embed/F6Wws6grNLg', frameborder='1')
 
     #about.work
         .agileits_works-top
@@ -121,7 +121,7 @@ block contenido
             .clearfix
         .agileits_work_grids
           br
-          h3.agile-tittle.two.gal Nuestros principales clientes 
+          h3.agile-tittle.two.gal Algunos de nuestros clientes
           br
           br
           br
@@ -171,4 +171,3 @@ block contenido
                 img.img-responsive(src='images/cliente_9.png', alt=' ')
                 .mask
                   a.info Hortifrut
-
